<resources>
    <string name="app_name">MyCredit</string>
    <string name="hello">Hello World!</string>
    <string name="signing">Войти</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_login">Введите логин</string>
    <string name="test_account">Тестовый аккаунт</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="would_you_like_select_partition">Желаете выбрать следующее отделение?</string>
    <string name="adress">Адресс:</string>
    <string name="time_to_work">Время работы:</string>
    <string name="select_partition">Выбрать отделение</string>
    <string name="hi">Здравствуйте</string>
    <string name="space">\ \</string>
    <string name="send_new_application">Подать новую заявку</string>
    <string name="my_application">Мои заявки</string>
    <string name="input_application">Заявка на кредит</string>
    <string name="send_application">Подать заявку</string>
    <string name="selected_partition">Выбранное отделение:</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="gender">Пол</string>
    <string name="birth_place">Место рождения</string>
    <string name="birth_date">Дата рождения</string>
    <string name="marital_status">Семейное положение</string>
    <string name="mobile_phone">Мобильный телефон</string>
    <string name="email">Электронная почта</string>
    <string name="address_name">Адрес</string>
    <string name="snils">СНИЛС</string>
    <string name="inn">ИНН</string>
    <string name="rf_passport">Паспорт РФ</string>
    <string name="issue_date">Дата выдачи</string>
    <string name="department_doc">Кем выдан</string>
    <string name="credit_sum">Сумма кредита</string>
    <string name="credit_period">Период кредита (в месяцах)</string>
    <string name="approved">Одобрено</string>
    <string name="in_progress">На рассмотрении</string>
</resources>